--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -1,10 +1,84 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-    <div class="container">
-        {{ cours.nom }} <br />
-        {% for section in sections %}
-            <a href="{{ path('oneCours', {id: cours.id}) }}" class="label label-info">{{ cours.nom }}</a>
-        {% endfor %}
+    <div class="page-header">
+        <div class="container">
+            <h1>Détail des cours</h1>
+            <ul class="breadcrumb">
+                <li><a href="index.html">Accueil</a></li>
+                <li class="active">Détail des cours</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container mt-20">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="course-intro">
+                    <img src="{{ asset('images/') }}{{ cours.imgFilePath }}" class="img-responsive" alt="">
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="course-full">
+                    <h2 class="heading">{{ cours.nom }}</h2>
+                    <div class="personal">
+                        <div>
+                            <span>Enseignant</span>
+                            <span>M. prof de math <a href="teacher-profile.html"><i class="fa fa fa-user"></i> </a></span>
+                        </div>
+                        <div>
+                        </div>
+                    </div>
+                    <div class="editor">
+                        {{ cours.accueil }}
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="clearfix"></div>
+
+        <div class="row mt-60 mb-100">
+            <div class="col-sm-3">
+                <ul class="nav nav-pills nav-stacked pull-left" role="tablist" style="padding-bottom: 5px;padding-top: 5px">
+                    {% for key,val in zonesSections %}
+                        <li role="presentation" {% if loop.index == 1 %} class="active" {% endif %}>
+                            <a href="#t1body{{ val.section.id }}" aria-controls="t1body{{ val.section.id }}" role="tab" data-toggle="tab" aria-expanded="true"><i class="fa fa-pencil fa-fw" aria-hidden="true"> </i>{{ val.section.nom }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="col-sm-9">
+                <div class="tab-content">
+                    {% for key,val in zonesSections %}
+                        <div role="tabpanel" class="tab-pane fade{% if loop.index == 1 %} in active {% endif %}" id="t1body{{ val.section.id }}">
+                            <div class="editor">
+                                <ul class="list-default">
+                                    {% for keyR,valR in val.zones.content %}
+                                        {% if val.zones.type[keyR] == "lien" %}
+                                            <li>{{ valR.nom }}</li>
+                                        {% elseif val.zones.type[keyR] == "devoir" %}
+                                            <li>{{ valR.nom }}</li>
+                                        {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                    {% endfor %}
+
+
+                    <!--
+
+                    <li>Exercice : entiers de Gauss
+                        <a class="btn btn-default btn-info btn-xs" href="http://www.e-educmaster.com/data_AFADEC/2d_degre/maths_exo-ind_alg_Bourgeois_2012-41.pdf"><i class="fa fa-file-pdf-o  fa-2x"></i> Enoncé (PDF)</a>
+                        <a class="btn btn-default btn-info btn-xs" href="http://www.e-educmaster.com/data_AFADEC/2d_degre/maths_exo-ind_alg_Bourgeois_2012-41.pdf"><i class="fa fa-file-pdf-o  fa-2x"></i> Indications (PDF)</a>
+                        <a class="btn btn-default btn-success btn-xs" href="http://www.e-educmaster.com/data_AFADEC/2d_degre/maths_cor_alg_Bourgeois_2012-41.pdf"><i class="fa fa-file-pdf-o  fa-2x"></i> Corrigé (PDF)</a>
+                    </li>
+
+                    -->
+
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
