--- a/web/css/components.css
+++ b/web/css/components.css
@@ -127,11 +127,11 @@ textarea.form-control, select.form-control{
 .icon-round{
     height: 35px;
     width:35px;
-    color: #0f9800;
+    color:#456d94;
     line-height: 34px;
     border-radius: 50%;
     text-align: center;
-    border: 2px solid #0f9800;
+    border: 2px solid #456d94;
     background-color: transparent;
 }
 
@@ -147,13 +147,13 @@ textarea.form-control, select.form-control{
 }
 
 .icon-fill{
-    background-color: #0f9800;
+    background-color: #456d94;
     color: #fff;
 }
 
 .icon-fill-inverse{
     background-color: #fff;
-    color: #0f9800;
+    color: #456d94;
 }
 
 .icon-2x{
@@ -181,7 +181,7 @@ textarea.form-control, select.form-control{
 }
 
 .icon-divider:before{
-    background-color: #0f9800;
+    background-color: #456d94;
     left: 0px;
 }
 
@@ -193,12 +193,17 @@ textarea.form-control, select.form-control{
 /* Navbar */
 
 .navbar-default{
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    /*
     position:relative;
-    background-color: #0f9800;
     border: 0;
+    z-index: 10;*/
+    background-color: #456d94;
     margin-bottom: 0px;
     width: 100%;
-    z-index: 10;
 }
 
 .navbar-brand{
@@ -315,7 +320,7 @@ textarea.form-control, select.form-control{
 .sub-menu > li > a{
     padding:12px;
     background-color: rgba(26, 43, 81,0.85);
-    border-left: 2px solid #0f9800;
+    border-left: 2px solid #456d94;
     font-size: 11px;
     color: #fff;
     display: block;
@@ -325,7 +330,7 @@ textarea.form-control, select.form-control{
 .sub-menu > li > a:hover{
     text-decoration: none;
     margin-left: 5px;
-    color: #0f9800;
+    color: #456d94;
 }
 
 .sub-menu .sub-menu{
@@ -417,7 +422,7 @@ textarea.form-control, select.form-control{
 }
 
 .btn-primary{
-    background-color: #0f9800;
+    background-color: #456d94;
 }
 
 .btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:active:focus, .btn-primary:active:hover{
@@ -478,7 +483,7 @@ textarea.form-control, select.form-control{
 
 a.readmore{
     display: inline-block;
-    color: #0f9800;
+    color: #456d94;
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     padding: 10px;
@@ -522,8 +527,8 @@ a.readmore{
 /* Input Groups */
 
 .input-group-addon{
-    background-color: #0f9800;
-    border-color: #0f9800;
+    background-color: #456d94;
+    border-color: #456d94;
     border-width: 2px;
     border-radius: 0;
     color: #fff;
@@ -545,7 +550,7 @@ a.readmore{
     transform: translateY(-50%);
     border-style: solid;
     border-width: 12px 0 12px 5px;
-    border-color: transparent transparent transparent #0f9800;
+    border-color: transparent transparent transparent #456d94;
 }
 
 .input-group-addon:first-child{
@@ -606,7 +611,7 @@ a.readmore{
 }
 
 .label-default{color: #fff; background-color:  #2D406B;}
-.label-primary{color:#fff; background-color:  #0f9800;}
+.label-primary{color:#fff; background-color:  #456d94;}
 .label-success{color:#fff; background-color: #44B144;}
 .label-info{color:#fff; background-color: #339ACE;}
 .label-warning{color:#fff; background-color: #F99F1F;}
@@ -626,7 +631,7 @@ a.readmore{
 
 .breadcrumb{
     background-color: transparent;
-    border: 2px solid #0f9800;
+    border: 2px solid #456d94;
     font-family: 'Montserrat', sans-serif;
     border-radius: 50px;
     display: inline-block;
@@ -645,7 +650,7 @@ a.readmore{
 /* Page Header */
 
 .page-header{
-    background-image: url(../images/page-header.jpg);
+    background-image: url(../educomp/images/page-header.jpg);
     background-size: cover;
     text-align: center;
     margin:0;
@@ -706,7 +711,7 @@ a.readmore{
     height: 0;
     border-style: solid;
     border-width: 7px 25px 0 25px;
-    border-color: #0f9800 transparent transparent transparent;
+    border-color: #456d94 transparent transparent transparent;
     transform: translateX(-50%);
 }
 
@@ -715,9 +720,9 @@ a.readmore{
 }
 
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
-    background-color: #0f9800;
+    background-color: #456d94;
     color: #fff;
-    border: 1px solid #0f9800;
+    border: 1px solid #456d94;
 }
 
 .nav>li>a:focus, .nav>li>a:hover, .nav>li>a:active{
@@ -742,7 +747,7 @@ a.readmore{
 
 .nav-tabs.nav-justified>.active>a, .nav-tabs.nav-justified>.active>a:focus, .nav-tabs.nav-justified>.active>a:hover{
     border: 0;
-    border: 1px solid #0f9800;
+    border: 1px solid #456d94;
 }
 
 .fade{
@@ -768,7 +773,7 @@ a.readmore{
 }
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover{
-    background-color: #0f9800;
+    background-color: #456d94;
 }
 
 .nav-stacked{
@@ -806,7 +811,7 @@ a.readmore{
     transform: translateY(-50%);
     border-style: solid;
     border-width: 16px 0 16px 7px;
-    border-color: transparent transparent transparent #0f9800;
+    border-color: transparent transparent transparent #456d94;
 }
 
 /* Accordion */
@@ -814,7 +819,7 @@ a.readmore{
 .accordion-1 .panel-group .panel{
     border-radius: 0px;
     border:0;
-    border-left: 2px solid #0f9800;
+    border-left: 2px solid #456d94;
     margin-bottom: 8px;
 }
 
@@ -854,7 +859,7 @@ a.readmore{
 .accordion-2 .panel-title>a{
     font-family: 'Oswald', sans-serif;
     font-size: 18px;
-    color: #0f9800;
+    color: #456d94;
     display: inline-block;
     padding-right: 35px;
     transition: 350ms ease all;
@@ -935,7 +940,7 @@ a.readmore{
 }
 
 .accordion-3 .panel-title>a{
-    color: #0f9800;
+    color: #456d94;
     transition: 350ms ease all;
 }
 
@@ -959,7 +964,7 @@ ul.list-default>li{
 ul.list-default>li:before{
     font: normal normal normal 8px/1 FontAwesome;
     content: "\f111";
-    color: #0f9800;
+    color: #456d94;
     position: absolute;
     top:15px;
     left: -20px;
@@ -983,7 +988,7 @@ ul.list-styled>li{
 ul.list-styled>li:before{
     font:  normal normal normal 8px/1 FontAwesome;
     content:"\f111";
-    color: #0f9800;
+    color: #456d94;
     margin-right: 10px;
     vertical-align: middle;
     line-height: 3px;
@@ -1001,7 +1006,7 @@ ol li {
 ol li:before {
     content: counter(item) ". ";
     counter-increment: item;
-    color: #0f9800;
+    color: #456d94;
     position: absolute;
     left: 15px;
 }
@@ -1041,7 +1046,7 @@ ol.list-styled>li{
 }
 
 .table>thead>tr>th{
-    border-bottom:2px solid #0f9800;
+    border-bottom:2px solid #456d94;
 }
 
 .table>tbody>tr>td,
@@ -1091,7 +1096,7 @@ ol.list-styled>li{
 .progress{
     height: 40px;
     background-color: transparent;
-    border: 2px solid #0f9800;
+    border: 2px solid #456d94;
     border-radius: 0;
     box-shadow: none;
     padding: 4px;
@@ -1172,8 +1177,8 @@ ol.list-styled>li{
 .pagination>.active>span,
 .pagination>.active>span:focus,
 .pagination>.active>span:hover{
-    background-color: #0f9800;
-    border-color: #0f9800;
+    background-color: #456d94;
+    border-color: #456d94;
 }
 
 .pagination>li>a:focus,
@@ -1229,11 +1234,11 @@ ol.list-styled>li{
 }
 
 .panel-primary{
-    border-color: #0f9800;
+    border-color: #456d94;
 }
 
 .panel-primary>.panel-heading{
-    background-color: #0f9800;
+    background-color: #456d94;
     border: 0;
     border-radius: 0;
     color: #fff;
@@ -1370,7 +1375,7 @@ ol.list-styled>li{
     position: absolute;
     top:-10px;
     right: -10px;
-    background-color: #0f9800;
+    background-color: #456d94;
     color: #fff;
     height: 25px;
     width: 25px;
