--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,14 +25,23 @@
     {% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 
+    {% block javascripts %}
+        <script src="{{ asset('vendors/jquery/dist/jquery.min.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('vendors/bootstrap/dist/js/bootstrap.min.js') }}" type="text/javascript"></script>
+        <!--<script src="js/bootstrap-select.min.js" type="text/javascript"></script>-->
+
+        <!--Educomp Custom Script-->
+        <script src="{{ asset('educomp/js/eduCompMain.js') }}" type=text/javascript></script>
+
+        <!-- Respond.js and HTML shiv provide HTML5 support in older browsers like IE9 and 8 -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    {% endblock %}
+
 </head>
 <body>
-
-{% if app.user %}
-    {% if app.user.hasRole('ROLE_ADMIN') %}
-        <a class="pull-right btn btn-info account" href="{{ path('fos_user_security_login') }}">Vue Admin</a>
-    {% endif %}
-{% endif %}
 
 <div class="loader-backdrop">           <!-- Loader -->
     <div class="loader">
@@ -49,7 +58,7 @@
                     <span class="sr-only">Toggle Menu</span>
                     <span>Menu</span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="{{ asset('educomp/images/logo.png') }}" alt=""></a> <!-- Replace with your Logo -->
+                <a class="navbar-brand" href="."><img src="{{ asset('educomp/images/logo.png') }}" alt=""></a> <!-- Replace with your Logo -->
 
 
                 {% if app.user %}
@@ -63,7 +72,7 @@
 
             <div class="collapse navbar-collapse" id="main-navigation">         <!-- Main Menu -->
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href=".">Accueil</a></li>
                     <li><a href="afadec.html">L’AFADEC</a></li>
                     <li><a href="#">Informations pratiques</a>
                         <ul class="sub-menu">									<!-- Sub Menu -->
@@ -74,6 +83,11 @@
                         </ul>
                     </li>
                     <li class="active"><a href="{{ path('myCourses') }}">Les cours</a></li>
+                    {% if app.user %}
+                        {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                            <li><a href="{{ path('fos_user_security_login') }}">Vue Admin</a></li>
+                        {% endif %}
+                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -169,23 +183,5 @@
 
 <div id="back"><i class="fa fa-angle-up"></i></div>     <!-- Back To Top -->
 
-
-
-
-
-{% block javascripts %}
-    <script src="{{ asset('vendors/jquery/dist/jquery.min.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('vendors/bootstrap/dist/js/bootstrap.min.js') }}" type="text/javascript"></script>
-    <!--<script src="js/bootstrap-select.min.js" type="text/javascript"></script>-->
-
-    <!--Educomp Custom Script-->
-    <script src="{{ asset('educomp/js/eduCompMain.js') }}" type=text/javascript></script>
-
-    <!-- Respond.js and HTML shiv provide HTML5 support in older browsers like IE9 and 8 -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-{% endblock %}
 </body>
 </html>
