--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
+    <script src="{{ asset('js/jquery-ui-1.10.3.custom.min.js') }}" type=text/javascript></script>
+    <script src="{{ asset('js/courseAdmin.js') }}" type=text/javascript></script>
+
     <div class="page-header">
         <div class="container">
             <h1>Détail des cours</h1>
@@ -11,9 +14,7 @@
         </div>
     </div>
 
-    {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
-        <a href="{{ path('fos_user_security_login') }}">Vue Admin</a>
-    {% endif %}
+    <a href="{{ path('fos_user_security_login') }}">Vue étudiant</a>
 
     <div class="container mt-20">
         <div class="row">
@@ -57,12 +58,27 @@
                     {% for key,val in zonesSections %}
                         <div role="tabpanel" class="tab-pane fade{% if loop.index == 1 %} in active {% endif %}" id="t1body{{ val.section.id }}">
                             <div class="editor">
-                                <ul class="list-default">
+                                <ul class="list-default courseElems">
                                     {% for keyR,valR in val.zones.content %}
                                         {% if val.zones.type[keyR] == "lien" %}
-                                            <li>{{ valR.nom }}</li>
+                                            <li class="courseElemAdmin lienAdmin col-md-12">
+                                                <div class="titleBar col-md-12">{{ valR.nom }}</div>
+                                                <div class="btnActionCol col-md-1">
+                                                    <ul>
+                                                        <li><i class="fa fa-check-square"></i></li>
+                                                        <li><i class="fa fa-pencil "></i></li>
+                                                        <li><i class="btnMoveElem fa fa-arrows-alt "></i></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="formCol col-md-10">
+
+                                                </div>
+                                                <div class="btnCloseCol col-md-1">
+                                                    <div class="btnDeleteElem"><i class="fa fa-close"></i></div>
+                                                </div>
+                                            </li>
                                         {% elseif val.zones.type[keyR] == "devoir" %}
-                                            <li>
+                                            <li class="courseElemAdmin col-md-12">
                                                 <table>
                                                     <tr>
                                                         <td></td>
@@ -76,21 +92,21 @@
                                                         <td>{{ val.zones.content[keyR].devoir.dateDebut|date('Y-m-d') }}</td>
                                                     </tr>
                                                     {% if val.zones.content[keyR].copie %}
-                                                    <tr>
-                                                        <td>Copie</td>
-                                                        <td></td>
+                                                        <tr>
+                                                            <td>Copie</td>
+                                                            <td></td>
 
-                                                        <td>{{ val.zones.content[keyR].copie.dateRendu|date('Y-m-d') }}</td>
-                                                        <td>{{ val.zones.content[keyR].copie.auteur.firstname }} {{ val.zones.content[keyR].copie.auteur.lastname }}</td>
-                                                    </tr>
+                                                            <td>{{ val.zones.content[keyR].copie.dateRendu|date('Y-m-d') }}</td>
+                                                            <td>{{ val.zones.content[keyR].copie.auteur.firstname }} {{ val.zones.content[keyR].copie.auteur.lastname }}</td>
+                                                        </tr>
                                                     {% endif %}
                                                     {% if val.zones.content[keyR].corrige %}
-                                                    <tr>
-                                                        <td>Corrigé</td>
-                                                        <td>{{ val.zones.content[keyR].corrige.dateRendu|date('Y-m-d') }}</td>
-                                                        <td>{{ val.zones.content[keyR].corrige.auteur.firstname }} {{ val.zones.content[keyR].corrige.auteur.lastname }}</td>
-                                                    </tr>
-                                                        {% endif %}
+                                                        <tr>
+                                                            <td>Corrigé</td>
+                                                            <td>{{ val.zones.content[keyR].corrige.dateRendu|date('Y-m-d') }}</td>
+                                                            <td>{{ val.zones.content[keyR].corrige.auteur.firstname }} {{ val.zones.content[keyR].corrige.auteur.lastname }}</td>
+                                                        </tr>
+                                                    {% endif %}
                                                 </table>
 
                                             </li>
