--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block main %}
 
-    {% include "welcome.html.twig" %}
+    {% include "accueil/welcome.html.twig" %}
 
     <div class="container mb-60 mt-60">
         <div class="row">
@@ -10,84 +10,11 @@
             {% block fos_user_content %}
             {% endblock fos_user_content %}
 
-            <div class="col-sm-8 col-sm-pull-4  mt-40">
-                <h2 class="heading">À LA <span class="color2">UNE</span></h2>
-                <div class="row mt-40 mb-40 bgcolor3">
-                    <div class="col-sm-5"><img class="img-responsive " src="medias/actu01.jpg"></div>
-                    <div class="col-sm-7">
-                        <h6>Les évêques invitent à retrouver le sens du politique</h6>
-                        <p class="font8">Dans un monde qui change, retrouver le sens du politique... Sous ce titre, un ouvrage publié ce vendredi 14 octobre, par les évêques de France, invite à refonder un nouveau contrat social qui soit réellement fédérateur. Contre la sinistrose ambiante, les auteurs pointent l’urgence qu'ils ressentent à fournir à leurs contemporains des charpentes plutôt que des armures ainsi qu'à substituer une culture du dialogue et du compromis à celle de l’affrontement.</p>
-                    </div>
-                </div>
-                <div class="row  bgcolor3 pt-20">
-                    <div class="col-sm-4">
-                        <figure class="effect-sadie">
-                            <a href="http://enseignement-catholique.fr/un-nouveau-tutoriel-pour-la-plateforme-reenchanter/">
-                                <img src="medias/actu02.png" class="img-responsive" alt="Tutoriel-Reenchanter">
-                                <figcaption>
-                                    <h6 class="img-title">Un nouveau tutoriel pour la plateforme Réenchanter l’École</h6>
-                                </figcaption>
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="col-sm-4">
-                        <figure class="effect-sadie">
-                            <a href="http://enseignement-catholique.fr/de-la-difference-a-la-reconnaissance-10-novembre-2016-au-cese/">
-                                <img src="medias/actu03.jpg" class="img-responsive" alt="A Rio, les jeunes ambassadeurs ont tenu des carnets d'écriture">
-                                <figcaption>
-                                    <h6 class="img-title">Rendez-vous inclusif le 10 novembre 2016 au CESE</h6>
-                                </figcaption>
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="col-sm-4">
-                        <figure class="effect-sadie">
-                            <a href="http://enseignement-catholique.fr/priorite-a-mixite-sociale-scolaire/">
-                                <img src="medias/actu04.jpg" class="img-responsive wp-post-image" alt="Le secrétaire général de l'enseignement catholique, Pascal Balmand, en conférence de presse le 4 octobre 2016">
-                                <figcaption>
-                                    <h6 class="img-title">Une conférence de presse de rentrée qui invite à un climat pacifié et pacifiant</h6>
-                                </figcaption>
-                            </a>
-                        </figure>
-                    </div>
-                </div>
-            </div>
+            {% include "accueil/alaune.html.twig" %}
+
         </div>
     </div>
 
-    <div class="clearfix"></div>
-
-    <div class="container mb-100">
-        <div class="row">
-
-            <div class="col-sm-8 hidden-xs">
-                <h4 class="heading pt-20 text-center">DÉCOUVREZ L’AFADEC <span class="color2">EN 2 MINUTES</span></h4>
-                <iframe class="mt-20" width="100%" height="430" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" src="https://player.vimeo.com/video/123835230"></iframe>
-            </div>
-            <!--
-            <div class="col-sm-4">
-                <h4 class="heading text-center">AGENDA</h4>
-                <span class="icon-divider"></span>
-            </div>
-            -->
-            <div class="col-sm-4 bgcolor3">
-                <h4 class="heading pt-20 text-center">SUIVEZ <span class="color2">NOUS</span></h4>
-                <div class="text-center" >
-                    <ul class="social">          <!-- Social Media Links -->
-                        <li><a href="#"><i class="fa fa-facebook inverse"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter inverse"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin inverse"></i></a></li>
-                    </ul>
-                </div>
-
-                <div class="mb-20 hidden-xs" style="height: 400px; overflow: scroll;">
-                    <a class="twitter-timeline" href="https://twitter.com/TwitterDev/likes">Tweets Liked by @TwitterDev</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
+    {% include "accueil/decouvrez.html.twig" %}
 
 {% endblock %}
-
