--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -54,3 +54,56 @@ a { font-family: inherit; color: inherit; }
 .badge-info:hover {background-color: #2d6987;}
 .badge-inverse {background-color: #333333;}
 .badge-inverse:hover {background-color: #1a1a1a;}
+
+/* Admin du cours*/
+.courseElems *{
+    margin: 0;
+    padding: 0 !important;
+    position: relative !important;
+    display: block !important;
+}
+.courseElemAdmin{
+    margin-bottom: 20px;
+    border-bottom: dashed 3px #456d94;
+    padding-bottom: 20px !important;
+}
+.courseElemAdmin::before{
+    content: none !important;
+}
+.titleBar{
+    background: #ff9c00;
+    text-align: center;
+    color: #fff;
+    padding: 5px;
+    font-family: "Montserrat",sans-serif;
+    margin-bottom: 5px;
+    border-radius: 2px;
+}
+.btnActionCol, .btnCloseCol{
+    text-align: center;
+    color: #fff;
+}
+.btnActionCol li{
+    margin-bottom: 5px;
+    background: #ff9c00;
+    cursor: pointer;
+    border-bottom-left-radius: 3px;
+    border-top-left-radius: 3px;
+    padding: 5px;
+}
+.btnDeleteElem{
+    background: #c60100;
+    cursor: pointer;
+    border-bottom-right-radius: 3px;
+    border-top-right-radius: 3px;
+    padding: 5px;
+}
+.btnDeleteElem i, .btnActionCol i{
+    line-height: 32px;
+    font-size: 20px;
+}
+.formCol{
+    border: 2px solid #d1d1d1;
+    background: #e9e9e9;
+    min-height: 120px !important;
+}
