frontend : admin Courses save entities

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -4,7 +4,7 @@
 
     <div class="col-sm-4 col-sm-push-8">
         <aside class="applynow-widget">
-            <img src="images/applynow.png" class="img-responsive center-block hidden-xs" alt="">
+            <img src="{{ asset('educomp/images/applynow.png') }}" class="img-responsive center-block hidden-xs" alt="">
             <div class="apply-info">
                 <h4 class="heading text-center">CONNECTEZ VOUS</h4>
 
