--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -1,20 +1,1 @@
-{% extends 'base.html.twig' %}
-
-{% block main %}
-
-    {% include "accueil/welcome.html.twig" %}
-
-    <div class="container mb-60 mt-60">
-        <div class="row">
-
-            {% block fos_user_content %}
-            {% endblock fos_user_content %}
-
-            {% include "accueil/alaune.html.twig" %}
-
-        </div>
-    </div>
-
-    {% include "accueil/decouvrez.html.twig" %}
-
-{% endblock %}
+{% include "FOSUserBundle::layout.html.twig" %}
