--- a/web/css/components.css
+++ b/web/css/components.css
@@ -650,7 +650,7 @@ a.readmore{
 /* Page Header */
 
 .page-header{
-    background-image: url(../educomp/images/page-header.jpg);
+    background-image: url(../educomp/images/bandeau.png);
     background-size: cover;
     text-align: center;
     margin:0;
