--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1,20 +1,99 @@
 {% extends 'base.html.twig' %}
 
-{% block main %}
-    <script src="{{ asset('js/jquery-ui-1.10.3.custom.min.js') }}" type=text/javascript></script>
-    <script src="{{ asset('js/courseAdmin.js') }}" type=text/javascript></script>
+{% block titrePage %}Bienvenue sur e-educmaster.com{% endblock %}
+{% block sousTitrePage %}E‐former les formateurs{% endblock %}
 
+{% block vueAdmin %}
+    {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
+        <li><a href="{{ path('oneCours', {id: cours.id, mode: 'etu'}) }}">Vue étudiant</a></li>
+    {% endif %}
+{% endblock %}
+
+{% block pageHeader %}
     <div class="page-header">
         <div class="container">
             <h1>Détail des cours</h1>
             <ul class="breadcrumb">
-                <li><a href=".">Accueil</a></li>
+                <li><a href="{{ path('homepage') }}">Accueil</a></li>
                 <li class="active">Détail des cours</li>
             </ul>
         </div>
     </div>
+{% endblock %}
 
-    <a href="{{ path('fos_user_security_login') }}">Vue étudiant</a>
+{% block main %}
+    <script src="{{ asset('vendors/jquery-ui/jquery-ui.min.js') }}" type=text/javascript></script>
+    <script src="{{ asset('vendors/autosize/dist/autosize.min.js') }}" type=text/javascript></script>
+
+    <script language="JavaScript">
+        jQuery(document).ready(function () {
+
+            // click sur le check : affichage ou non de la zoneRessource
+            $('.activationBtn').click(function () {
+                var id = $(this).closest('.courseElemAdmin').attr('data-idzone');
+                var isVisible = $(this).hasClass('fa-check-square-o');
+                var myBtn = $(this);
+                $.ajax({
+                    type: "POST",
+                    url: "{{path('activateZone_ajax')}}",
+                    data: {
+                        id: id,
+                        isVisible: isVisible
+                    },
+                    dataType: "json",
+                    success: function (response) {
+                        if (response["isVisible"]) {
+                            myBtn.removeClass('fa-square-o').addClass('fa-check-square-o');
+                        } else {
+                            myBtn.removeClass('fa-check-square-o').addClass('fa-square-o');
+                        }
+                    }
+                });
+            });
+
+            // click sur la suppression de la zoneRessource
+            $('.btnDeleteElem').click(function () {
+                var id = $(this).closest('.courseElemAdmin').attr('data-idzone');
+                var myBtn = $(this);
+                $.ajax({
+                    type: "POST",
+                    url: "{{path('deleteZone_ajax')}}",
+                    data: {
+                        id: id
+                    },
+                    dataType: "json",
+                    success: function (response) {
+                        myBtn.closest('.courseElemAdmin').remove();
+                    }
+                });
+            });
+
+            $( ".courseElems" ).sortable({
+                placeholder: "ui-state-highlight",
+                handle: ".btnMoveElem",
+                forcePlaceholderSize: true,
+                stop: function( event, ui ) {
+                    var order = [];
+                    $('.courseElems .courseElemAdmin').each(function(){
+                        order.push($(this).attr('data-idzone'));
+                    });
+                    $.ajax({
+                        type: "POST",
+                        url: "{{path('reorderZones_ajax')}}",
+                        data: {
+                            order: order
+                        },
+                        dataType: "json",
+                        success: function (response) {
+                            console.log(response);
+                        }
+                    });
+                }
+            });
+
+            autosize($('textarea'));
+        });
+    </script>
 
     <div class="container mt-20">
         <div class="row">
@@ -26,10 +105,12 @@
             <div class="col-sm-8">
                 <div class="course-full">
                     <h2 class="heading">{{ cours.nom }}</h2>
+
                     <div class="personal">
                         <div>
                             <span>Enseignant</span>
-                            <span>M. prof de math <a href="teacher-profile.html"><i class="fa fa fa-user"></i> </a></span>
+                            <span>M. prof de math <a href="teacher-profile.html"><i class="fa fa fa-user"></i>
+                                </a></span>
                         </div>
                         <div>
                         </div>
@@ -45,10 +126,14 @@
 
         <div class="row mt-60 mb-100">
             <div class="col-sm-3">
-                <ul class="nav nav-pills nav-stacked pull-left" role="tablist" style="padding-bottom: 5px;padding-top: 5px">
+                <ul class="nav nav-pills nav-stacked pull-left" role="tablist"
+                    style="padding-bottom: 5px;padding-top: 5px">
                     {% for key,val in zonesSections %}
                         <li role="presentation" {% if loop.index == 1 %} class="active" {% endif %}>
-                            <a href="#t1body{{ val.section.id }}" aria-controls="t1body{{ val.section.id }}" role="tab" data-toggle="tab" aria-expanded="true"><i class="fa fa-pencil fa-fw" aria-hidden="true"> </i>{{ val.section.nom }}</a>
+                            <a href="#t1body{{ val.section.id }}" aria-controls="t1body{{ val.section.id }}" role="tab"
+                               data-toggle="tab" aria-expanded="true"><i class="fa fa-pencil fa-fw"
+                                                                         aria-hidden="true"> </i>{{ val.section.nom }}
+                            </a>
                         </li>
                     {% endfor %}
                 </ul>
@@ -56,59 +141,79 @@
             <div class="col-sm-9">
                 <div class="tab-content">
                     {% for key,val in zonesSections %}
-                        <div role="tabpanel" class="tab-pane fade{% if loop.index == 1 %} in active {% endif %}" id="t1body{{ val.section.id }}">
+                        <div role="tabpanel" class="tab-pane fade{% if loop.index == 1 %} in active {% endif %}"
+                             id="t1body{{ val.section.id }}">
                             <div class="editor">
                                 <ul class="list-default courseElems">
                                     {% for keyR,valR in val.zones.content %}
                                         {% if val.zones.type[keyR] == "lien" %}
-                                            <li class="courseElemAdmin lienAdmin col-md-12">
-                                                <div class="titleBar col-md-12">{{ valR.nom }}</div>
-                                                <div class="btnActionCol col-md-1">
-                                                    <ul>
-                                                        <li><i class="fa fa-check-square"></i></li>
-                                                        <li><i class="fa fa-pencil "></i></li>
-                                                        <li><i class="btnMoveElem fa fa-arrows-alt "></i></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="formCol col-md-10">
-
-                                                </div>
-                                                <div class="btnCloseCol col-md-1">
-                                                    <div class="btnDeleteElem"><i class="fa fa-close"></i></div>
+                                            <li data-idZone="{{ val.zones.containers[keyR].id }}"
+                                                class="courseElemAdmin lienAdmin col-md-12">
+                                                <div class="titleBar col-md-12">Lien externe</div>
+                                                {% include "cours/adminBtns.html.twig" %}
+                                                <div class="formCol col-md-11">
+                                                    <div class="row">
+                                                        <div class="LabelAdmin col-sm-3">Nom</div>
+                                                        <input class="champAdmin col-sm-9" value="{{ valR.nom }}"/>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="LabelAdmin col-sm-3">Description</div>
+                                                        <input class="champAdmin col-sm-9" value="{{ valR.description }}"/>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="LabelAdmin col-sm-3">URL</div>
+                                                        <input class="champAdmin col-sm-9" value="{{ valR.url }}"/>
+                                                    </div>
                                                 </div>
                                             </li>
                                         {% elseif val.zones.type[keyR] == "devoir" %}
-                                            <li class="courseElemAdmin col-md-12">
-                                                <table>
-                                                    <tr>
-                                                        <td></td>
-                                                        <td>Fichier</td>
-                                                        <td>date de dépôt</td>
-                                                        <td>Auteur</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Devoir</td>
-                                                        <td>{{ val.zones.content[keyR].devoir.nom }}</td>
-                                                        <td>{{ val.zones.content[keyR].devoir.dateDebut|date('Y-m-d') }}</td>
-                                                    </tr>
-                                                    {% if val.zones.content[keyR].copie %}
+                                            <li data-idZone="{{ val.zones.containers[keyR].id }}"
+                                                class="courseElemAdmin devoirAdmin col-md-12">
+
+                                                <div class="titleBar col-md-12">{{ val.zones.content[keyR].devoir.nom }}</div>
+                                                {% include "cours/adminBtns.html.twig" %}
+                                                <div class="formCol col-md-11">
+                                                    <table>
                                                         <tr>
-                                                            <td>Copie</td>
                                                             <td></td>
-
-                                                            <td>{{ val.zones.content[keyR].copie.dateRendu|date('Y-m-d') }}</td>
-                                                            <td>{{ val.zones.content[keyR].copie.auteur.firstname }} {{ val.zones.content[keyR].copie.auteur.lastname }}</td>
+                                                            <td>Fichier</td>
+                                                            <td>date de dépôt</td>
+                                                            <td>Auteur</td>
                                                         </tr>
-                                                    {% endif %}
-                                                    {% if val.zones.content[keyR].corrige %}
                                                         <tr>
-                                                            <td>Corrigé</td>
-                                                            <td>{{ val.zones.content[keyR].corrige.dateRendu|date('Y-m-d') }}</td>
-                                                            <td>{{ val.zones.content[keyR].corrige.auteur.firstname }} {{ val.zones.content[keyR].corrige.auteur.lastname }}</td>
+                                                            <td>Devoir</td>
+                                                            <td>{{ val.zones.content[keyR].devoir.nom }}</td>
+                                                            <td>{{ val.zones.content[keyR].devoir.dateDebut|date('Y-m-d') }}</td>
                                                         </tr>
-                                                    {% endif %}
-                                                </table>
+                                                        {% if val.zones.content[keyR].copie %}
+                                                            <tr>
+                                                                <td>Copie</td>
+                                                                <td></td>
 
+                                                                <td>{{ val.zones.content[keyR].copie.dateRendu|date('Y-m-d') }}</td>
+                                                                <td>{{ val.zones.content[keyR].copie.auteur.firstname }} {{ val.zones.content[keyR].copie.auteur.lastname }}</td>
+                                                            </tr>
+                                                        {% endif %}
+                                                        {% if val.zones.content[keyR].corrige %}
+                                                            <tr>
+                                                                <td>Corrigé</td>
+                                                                <td>{{ val.zones.content[keyR].corrige.dateRendu|date('Y-m-d') }}</td>
+                                                                <td>{{ val.zones.content[keyR].corrige.auteur.firstname }} {{ val.zones.content[keyR].corrige.auteur.lastname }}</td>
+                                                            </tr>
+                                                        {% endif %}
+                                                    </table>
+                                                </div>
+                                            </li>
+
+                                        {% elseif val.zones.type[keyR] == "free" %}
+                                            <li data-idZone="{{ val.zones.containers[keyR].id }}"
+                                                class="courseElemAdmin freeAdmin col-md-12">
+
+                                                <div class="titleBar col-md-12">Zone libre</div>
+                                                {% include "cours/adminBtns.html.twig" %}
+                                                <div class="formCol col-md-11">
+                                                    <textarea data-champName="description" class="champAdmin col-sm-12">{{ valR }}</textarea>
+                                                </div>
                                             </li>
                                         {% endif %}
                                     {% endfor %}
