--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -25,7 +25,7 @@ body{
 
 .nav-stacked {
     padding: 0px;
-    margin-right: 50px;
+    margin-right: 10px;
     position: relative;
     z-index: 3;
     /*width: 100%;*/
@@ -67,11 +67,10 @@ a { font-family: inherit; color: inherit; }
     border-bottom: dashed 3px #456d94;
     padding-bottom: 20px !important;
 }
-.courseElemAdmin::before{
+.courseElemAdmin::before, .courseElem::before{
     content: none !important;
 }
 .titleBar{
-    background: #ff9c00;
     text-align: center;
     color: #fff;
     padding: 5px;
@@ -79,9 +78,14 @@ a { font-family: inherit; color: inherit; }
     margin-bottom: 5px;
     border-radius: 2px;
 }
-.btnActionCol, .btnCloseCol{
-    text-align: center;
-    color: #fff;
+.lienAdmin .titleBar{
+    background: #0ba204;
+}
+.devoirAdmin .titleBar{
+    background: #ff3f46;
+}
+.freeAdmin .titleBar{
+    background: #0048a2;
 }
 .btnActionCol li{
     margin-bottom: 5px;
@@ -90,20 +94,51 @@ a { font-family: inherit; color: inherit; }
     border-bottom-left-radius: 3px;
     border-top-left-radius: 3px;
     padding: 5px;
+    text-align: center;
+    color: #fff;
 }
 .btnDeleteElem{
     background: #c60100;
-    cursor: pointer;
-    border-bottom-right-radius: 3px;
-    border-top-right-radius: 3px;
-    padding: 5px;
 }
-.btnDeleteElem i, .btnActionCol i{
+.btnActionCol i{
     line-height: 32px;
     font-size: 20px;
 }
 .formCol{
     border: 2px solid #d1d1d1;
     background: #e9e9e9;
-    min-height: 120px !important;
+    min-height: 150px !important;
+    padding: 3px 6px !important;
+}
+.LabelAdmin{
+    font-weight: bold;
+}
+.champAdmin{
+    padding: 1px 2px !important;
+}
+
+.ui-state-highlight {
+    height: 200px;
+    line-height: 120px;
+    background: #b3d271;
+    border: #a8c769 2px solid;
+}
+
+.freeAdmin [data-champName="description"]{
+    resize: none;
+}
+
+/* cours */
+.courseElem{
+    list-style: none;
+}
+.ressourceLink{
+    margin-bottom: 5px;
+    background: #ff9c00;
+    cursor: pointer;
+    border-radius: 3px;
+    padding: 2px;
+    text-align: center;
+    color: #fff;
+    font-size: 20px;
 }
